add unit test2